Add potential changes section

--- a/report/report.tex
+++ b/report/report.tex
@@ -1780,6 +1780,60 @@ information, such as prices and discounts.
 Clear confirmation messages should be displayed for successful updates to
 product information.
 
+\section{Potential Changes}
+\subsection{Adding Multi-Language Support}
+Support for multiple languages could be added to expand the user base and
+promote inclusivity.
+
+\subsubsection{Implementation}
+Languages to be supported should be identified based on customer demographics
+and market analysis. Translators or language localization tools should be
+consulted.
+
+A framework or library, such as i18n (internationalization) libraries, should
+be selected. Language files should be prepared for text content,
+labels, and error messages.
+
+Language selection settings should be stored in local storage.
+A dropdown or button for language selection should be added to the interface.
+All text elements should be linked to localized resource files.
+
+The feature should be ensured to
+integrate seamlessly with screen readers.
+
+\subsubsection{Testing}
+Linguistic testing should ensure translations are accurate and contextually
+appropriate.
+Testing should also ensure that the interface adapts correctly to languages
+with different text directions (e.g., RTL for Arabic).
+
+\subsection{Adding Dark Mode}
+Support for dark mode could be added to enhance user experience and reduce eye
+strain, especially in low-light environments.
+
+\subsubsection{Implementation}
+Customer feedback should be collected to determine preferences for dark mode
+options and customization levels (e.g., scheduled dark mode).
+Research should be conducted on accessibility guidelines to ensure the feature
+is inclusive.
+
+A dynamic theming approach should be selected, using CSS variables or theme
+libraries for web platforms.
+Compatibility with existing UI components should be ensured.
+
+A toggle button for enabling/disabling dark mode should be added to the
+interface.
+The UI should be redesigned with dark-friendly color palettes while maintaining
+sufficient contrast for readability.
+
+\subsubsection{Accessibility Considerations}
+The feature should include options for high contrast or grayscale modes to
+accommodate users with specific visual impairments.
+
+\subsubsection{Testing}
+Usability testing should be performed for readability and accessibility in both
+light and dark modes.
+
 \section{Conclusion}
 % TODO.
 The conclusion goes here.
