Add photo of Can

--- a/report/report.tex
+++ b/report/report.tex
@@ -1951,7 +1951,7 @@ At BusinessUp, she hones her skills in the Liquid programming language and
 works as a junior full-stack developer.
 \end{IEEEbiography}
 
-\begin{IEEEbiography}{Muhammet Berk Can}
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{author_can.png}}]{Muhammet Berk Can}
 Motorcu çocuk
 \end{IEEEbiography}
 
