--- a/report/report.tex
+++ b/report/report.tex
@@ -113,6 +113,7 @@
 %
 \ifCLASSINFOpdf
   \usepackage[pdftex]{graphicx}
+  \usepackage{hyperref}
   % declare the path(s) where your graphic files are
   \graphicspath{{../diagram_dst/}}
   % and their extensions so you won't have to specify these with
@@ -636,7 +637,7 @@ future development in the online retail industry.
 \section{Feasibility Study and Plan}
 Our objectives are
 \begin{enumerate*}
-  \item to develope an online technology store with a robust, user-friendly,
+  \item to develop an online technology store with a robust, user-friendly,
     and secure platform,
   \item to integrate essential functionalities for customers, administrators,
     and external service providers,
@@ -648,6 +649,13 @@ Our objectives are
 
 We will now discuss the feasibility of the project and the plan to achieve the
 objectives.
+
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{architecture.mermaid}
+\caption{Architecture diagram of the system.}
+\label{fig:architecture}
+\end{figure}
 
 \subsection{Technical Feasibility}
 \begin{itemize}
@@ -666,7 +674,9 @@ objectives.
     monitoring for performance and error tracking.
 \end{itemize}
 
-Our assessment is that this stack is reliable, widely supported, and feasible
+Our assessment is that this stack,
+as shown in \autoref{fig:architecture},
+is reliable, widely supported, and feasible
 for the development team's skill set and project scope.
 
 \subsection{Operational Feasibility}
@@ -1457,7 +1467,20 @@ a robust system specification.
 \end{description}
 
 \section{Stories and User Scenarios}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{sequence_0_frontend_backend_boundary.mermaid}
+\caption{Sequence diagram that is performed when a customer requests a privileged action.}
+\label{fig:frontend_backend_boundary}
+\end{figure}
+
 \subsection{User Story 1: Customer Registration}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{sequence_1_customer_registration.mermaid}
+\caption{Sequence diagram for User Story 1: Customer Registration.}
+\label{fig:sequence_1}
+\end{figure}
 \begin{description}
   \item[Actors] Customer, System
   \item[Preconditions] \hfill \\
@@ -1492,6 +1515,12 @@ a robust system specification.
 \end{description}
 
 \subsection{User Story 2: Customer Account Management}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{sequence_2_customer_account_management.mermaid}
+\caption{Sequence diagram for User Story 2: Customer Account Management.}
+\label{fig:sequence_2}
+\end{figure}
 \begin{description}
   \item[Actors] Customer, System
   \item[Preconditions] \hfill \\
@@ -1540,6 +1569,12 @@ a robust system specification.
     The customer's updated contact information is saved in the system.
 \end{description}
 \subsection{User Story 3: Browsing and Searching for Products}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{sequence_3_browsing_products.mermaid}
+\caption{Sequence diagram for User Story 3: Browsing and Searching for Products.}
+\label{fig:sequence_3}
+\end{figure}
 \begin{description}
   \item[Actors] Customer, System
 \end{description}
@@ -1569,6 +1604,12 @@ a robust system specification.
 \end{description}
 
 \subsection{User Story 4: Viewing Detailed Product Information}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{sequence_4_viewing_product_details.mermaid}
+\caption{Sequence diagram for User Story 4: Viewing Detailed Product Information.}
+\label{fig:sequence_4}
+\end{figure}
 \begin{description}
   \item[Actors] Customer, System
 \end{description}
@@ -1587,6 +1628,12 @@ a robust system specification.
 \end{description}
 
 \subsection{User Story 5: Adding Products to Favorites}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{sequence_5_adding_favorites.mermaid}
+\caption{Sequence diagram for User Story 5: Adding Products to Favorites.}
+\label{fig:sequence_5}
+\end{figure}
 \begin{description}
   \item[Actors] Customer, System
 \end{description}
@@ -1604,6 +1651,12 @@ a robust system specification.
 \end{description}
 
 \subsection{User Story 6: Purchasing Items}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{sequence_6_purchasing items.mermaid}
+\caption{Sequence diagram for User Story 6: Purchasing Items.}
+\label{fig:sequence_6}
+\end{figure}
 \begin{description}
   \item[Actors] Customer, Payment Gateway Provider, System
   \item[Preconditions] \hfill
@@ -1622,6 +1675,12 @@ a robust system specification.
   \item[Postconditions] \hfill \\
     The order is placed, and the customer receives a confirmation.
 \end{description}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=1.5in]{state_order.mermaid}
+\caption{State diagram for an Order object.}
+\label{fig:state_order}
+\end{figure}
 \subsubsection{Payment Failure Scenario}
 \begin{description}
   \item[Main Flow] \hfill
@@ -1635,6 +1694,12 @@ a robust system specification.
     The payment issue is resolved, or the customer decides to retry later.
 \end{description}
 \subsection{User Story 7: Managing Orders}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{sequence_7_managing_orders.mermaid}
+\caption{Sequence diagram for User Story 7: Managing Orders.}
+\label{fig:sequence_7}
+\end{figure}
 \begin{description}
   \item[Actors] Customer, System
   \item[Preconditions] \hfill
@@ -1668,6 +1733,12 @@ a robust system specification.
 \end{description}
 
 \subsection{User Story 8: Writing Product Reviews}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{sequence_8_reviewing_products.mermaid}
+\caption{Sequence diagram for User Story 8: Writing Product Reviews.}
+\label{fig:sequence_8}
+\end{figure}
 \begin{description}
   \item[Actors] Customer, System
   \item[Preconditions] \hfill \\ The customer has purchased the product.
@@ -1687,6 +1758,12 @@ a robust system specification.
 \end{description}
 
 \subsection{User Story 9: Managing Inventory}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{sequence_9_managing_inventory.mermaid}
+\caption{Sequence diagram for User Story 9: Managing Inventory.}
+\label{fig:sequence_9}
+\end{figure}
 \begin{description}
   \item[Actors] Store Administrator, System
 \end{description}
@@ -1703,6 +1780,12 @@ a robust system specification.
 \end{description}
 
 \subsection{User Story 10: Adding a New Product}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{sequence_10_add_product.mermaid}
+\caption{Sequence diagram for User Story 10: Adding a New Product.}
+\label{fig:sequence_10}
+\end{figure}
 \begin{description}
   \item[Actors] Store Administrator, System
 \end{description}
@@ -1890,7 +1973,7 @@ light and dark modes.
 \section{System Boundaries}
 \begin{figure}[!t]
 \centering
-\includegraphics[width=2.5in]{boundary}
+\includegraphics[width=3.5in]{boundary}
 \caption{Boundary diagram of the system.}
 \label{fig:boundary}
 \end{figure}
@@ -2022,22 +2105,27 @@ They are elaborated in the following subsections.
 
 
 \appendices
-% TODO: Update appendices.
-\section{Proof of the First Zonklar Equation}
-Appendix one text goes here.
+\newpage
+\section{Class Diagram of the System}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3.5in]{class.mermaid}
+\caption{Class diagram of the system.}
+\label{fig:class}
+\end{figure}
+
+The class diagram of the system, produced in \autoref{fig:class}, illustrates
+the key classes and their relationships in the system.
 
 % you can choose not to have a title for an appendix
 % if you want by leaving the argument blank
-\section{}
-Appendix two text goes here.
+%\section{}
+%Appendix two text goes here.
 
 
 % use section* for acknowledgment
-\section*{Acknowledgment}
-
-
-The authors would like to thank...
-
+%\section*{Acknowledgment}
+%The authors would like to thank...
 
 % Can use something like this to put references on a page
 % by themselves when using endfloat and the captionsoff option.
