Update title and use twopage

--- a/report/report.tex
+++ b/report/report.tex
@@ -49,7 +49,7 @@
 
 
 
-\documentclass[a4paper,journal]{IEEEtran}
+\documentclass[twoside,a4paper,journal]{IEEEtran}
 %
 % If IEEEtran.cls has not been installed into the LaTeX system files,
 % manually specify the path to it like:
@@ -369,7 +369,7 @@
 % not capitalized unless they are the first or last word of the title.
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
-\title{Technical Specification\\for an Online Technology Store}
+\title{Kimono: Technical Specification\\for an Online Technology Store}
 %
 %
 % author names and IEEE memberships
@@ -420,7 +420,7 @@ Manisa Celâl Bayar University, 45140 Manisa, Türkiye.}% <-this % stops a space
 %{Shell \MakeLowercase{\textit{et al.}}: Bare Demo of IEEEtran.cls for IEEE Journals}
 \markboth%
 {December~2024}%
-{Technical Specification for an Online Technology Store}
+{Kimono: Technical Specification for an Online Technology Store}
 % The only time the second header will appear is for the odd numbered pages
 % after the title page when using the twoside option.
 %
