--- a/report/report.tex
+++ b/report/report.tex
@@ -2087,7 +2087,15 @@ They are elaborated in the following subsections.
 
 
 \section{Conclusion}
-% TODO.
+In this document, we have given the formal specification of the system
+requirements of the proposed e-commerce platform.
+We have detailed the functional and non-functional requirements, user stories,
+and user scenarios.
+We have also provided a task breakdown for each user story, potential changes
+to enhance the system, and a description of the system boundaries.
+By following these specifications, the development team can effectively
+implement the e-commerce platform to meet the needs of customers and
+administrators.
 
 % if have a single appendix:
 %\appendix[Proof of the Zonklar Equations]
@@ -2105,7 +2113,6 @@ They are elaborated in the following subsections.
 
 
 \appendices
-\newpage
 \section{Class Diagram of the System}
 \begin{figure}[!t]
 \centering
@@ -2113,7 +2120,6 @@ They are elaborated in the following subsections.
 \caption{Class diagram of the system.}
 \label{fig:class}
 \end{figure}
-
 The class diagram of the system, produced in \autoref{fig:class}, illustrates
 the key classes and their relationships in the system.
 
@@ -2174,7 +2180,6 @@ H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
 % your own custom macro containing the \includegraphics command to make things
 % simpler here.)
 %\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{mshell}}]{Michael Shell}
-% or if you just want to reserve a space for a photo:
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{author_ozcan.png}}]{Emre Özcan}
 Senior Computer Engineering student at Manisa Celâl Bayar University
@@ -2217,11 +2222,6 @@ In 2024, he interned at Indas Technology.
 He is currently in his fourth year of studies in the field of Computer
 Engineering.
 \end{IEEEbiography}
-
-% if you will not have a photo at all:
-%\begin{IEEEbiographynophoto}{John Doe}
-%Biography text here.
-%\end{IEEEbiographynophoto}
 
 % insert where needed to balance the two columns on the last page with
 % biographies
