Update Can's photo and biography

--- a/report/report.tex
+++ b/report/report.tex
@@ -2209,7 +2209,15 @@ works as a junior full-stack developer.
 \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{author_can.png}}]{Muhammet Berk Can}
-Motorcu çocuk
+He was born on August 21, 2002, in İnegöl, Bursa, Turkey.
+He began his education at Prof. Dr. Selçuk Yahşi Primary School and continued
+there for middle school.
+He completed his high school education at İnegöl Naire Çikayeva Anatolian High
+School.
+He is currently pursuing a bachelor's degree at Manisa Celâl Bayar University.
+He is a fourth-year computer engineering student, specializing in the field of
+back-end development.
+He is a member of the "MCBU Bilişim" Community at Manisa Celâl Bayar University.
 \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{author_ates.png}}]{Oğuz Anıl Ateş}
