--- a/report/report.tex
+++ b/report/report.tex
@@ -2123,6 +2123,10 @@ administrators.
 The class diagram of the system, produced in \autoref{fig:class}, illustrates
 the key classes and their relationships in the system.
 
+\section{List of Figures}
+\renewcommand{\listfigurename}{}
+\listoffigures
+
 % you can choose not to have a title for an appendix
 % if you want by leaving the argument blank
 %\section{}
@@ -2130,8 +2134,11 @@ the key classes and their relationships in the system.
 
 
 % use section* for acknowledgment
-%\section*{Acknowledgment}
-%The authors would like to thank...
+\section*{Acknowledgment}
+The authors would like to acknowledge the support and guidance provided by
+their professors and mentors during the preparation of this document.
+They would also like to thank their peers for their valuable feedback and
+suggestions.
 
 % Can use something like this to put references on a page
 % by themselves when using endfloat and the captionsoff option.
