--- a/report/report.tex
+++ b/report/report.tex
@@ -2205,6 +2205,8 @@ engineering principles and a commitment to
 impactful, efficient development.
 \end{IEEEbiography}
 
+\newpage % For balancing the last page
+
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{author_uyar.png}}]{Melisa Uyar}
 She was born on July 29, 2001, in Pinneberg, Germany.
 She is currently a fourth-year computer engineering student at Manisa Celâl
@@ -2256,7 +2258,7 @@ Engineering.
 
 % Can be used to pull up biographies so that the bottom of the last one
 % is flush with the other column.
-%\enlargethispage{-5in}
+\enlargethispage{-0.5in}
 
 % that's all folks
 \end{document}
